--- a/style.css
+++ b/style.css
@@ -1,17 +1,24 @@
-/* basic settings */
-*{margin: 0; padding: 0;outline:0;}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
-    font-family: "Orbitron",
-    sans-serif;
+    font-family:  "Poppins" ,sans-serif;
     min-height: 100vh;
+    height: 100%;
 }
 
-/* styling navbar */
+/* -----------navbar--------- */
+
 .navbar-container
 {
     display: flex;
     align-items: center;
-    padding: 30px 80px;
+    padding: 1rem 2rem;
+}
+.navbar-container div:first-of-type img{
+    width: 80%;
 }
 .list{display: flex;}
 .list-item
@@ -27,11 +34,8 @@ body{
 }
 .list-item:hover , .list-item.active
 {
-    font-weight: 900;
-}
-.list-item:hover, .list-item.active
-{
-    border-bottom: 2px solid #000;
+    font-weight: 500;
+    border-bottom: 1px solid #000;
 }
 .button-group
 {
@@ -49,21 +53,33 @@ body{
     margin-left: 15px;
     border-radius: 10px;
     cursor: pointer;
+    border: 1px solid #000;
+}
+.nav-button:hover
+{
+    background:#000;
+    color: #fff;
+    transition: 0.25s ease-in-out;
+}
+.search-icon svg{
+    width: 60px;
 }
 
-/* styling hero-container */
+.menu-icon{
+    display: none;
+}
+
+
+/* ---------------hero container----------- */
 .hero-container
 {
     display: flex;
     padding: 20px 40px;
 }
-.hero-container-right
-{
-    width: 60%;
-    display: flex;
-    position: relative;
-    flex-direction: column;
-}
+
+
+
+
 .person_img
 {
     width: 40%;
@@ -71,23 +87,33 @@ body{
 }
 .personPic
 {
-    margin-left: 25px;
     position: absolute;
-    top:10%;
-    left: 5%;
+    top:30px;
+    left:20px;
     max-width: 300px;
     cursor: pointer;
-
 }
 .square
 {
+    /* max-width: 300px; */
     max-width:250px;
     position: absolute;
-    right:18%;
-    bottom:-15px;
+    top:200px;
+    left: 120px;
     z-index: -1;
     cursor: pointer;
 }
+
+
+.hero-container-right
+{
+    width: 60%;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+}
+
+
 .star
 {
     max-width: 5%;
@@ -125,53 +151,114 @@ body{
     font-family: "Poppins" ,sans-serif;
 }
 
-/* select second div element through Adjacent Sibling Selector  */
+
 .hero-description + div{
-    margin: 30px 0 20px 250px;
+    margin: 4rem auto;
 }
-/* selecting the button element through child selector */
 div > button
 {
-    padding: 4px 15px;
+    padding:5px 15px;
     background: transparent;
     border-radius: 10px;
     font-family: "Poppins" ,sans-serif;
+    border: none;
+    border: 1px solid #000;
 }
 .button-email:hover{
     transition: 0.25s ease-in-out;
     background-color: #000000;
     color: #fff;
     cursor: pointer;
-
 }
 .button-join
 {
     background-color: #000000;
     color: #fff;
     cursor: pointer;
-
+   padding: 5px 10px;
 }
 .button-join:hover
 {
     transition: 0.25s ease-in-out;
     background-color:transparent;
     color: #000;
-    border: 2px solid #000;
-}
-/* selecting the second div element in hero container with Adjacent Sibling Selector  */
-.hero-description + div + div{
-    margin-top: 60px;
+    outline: 1px solid #000;
 }
 .contact-heading
 {
     font-family: "Poppins" ,sans-serif;
     text-align: center;
 }
-.icons
-{margin:10px 0 0 290px;}
+
+.icons{
+    width: 20%;
+    display: block;
+    margin: 0 auto;
+}
 
 .icons img
 {
     width: 20px;
     margin-left: 10px;
+}
+
+@media (max-width:1024px){
+    .hero-container{
+        flex-direction: column;
+        gap: 30rem;
+        padding: 0 1rem;
+    }
+    .person_img{
+        width: 50%;
+        margin: 0 auto;
+    }
+    .hero-container-right{
+        width: 100%;
+    }
+    .navbar-container div:first-of-type +div , .button-group{
+        display: none;
+    }
+    .icons{
+        margin-top:1rem;
+        width: 20%;
+    }
+    .hero-description + div{
+        margin: 1rem auto;
+    }
+    .hero-heading{
+        font-size: 2rem;
+    }
+    .menu-icon{
+        display: block;
+        margin-left: auto;
+    }
+    .navbar-container div:first-of-type img{
+        width: 60%;
+    }
+    .hero-description {
+        padding: 0;
+    }
+}
+@media (max-width:420px){
+    .personPic
+{
+    max-width:250px;
+}
+.square
+{
+    max-width:180px;
+}
+.hero-container{
+    gap: 24rem;
+}
+.hero-description {
+    padding: 0;
+}
+.icons{
+    width: 50%;
+}
+.person_img{
+    width: 100%;
+    margin: 0 auto;
+}
 }
